seperate bse.htmls and css files for marketing, dashboard and template

--- a/cms/templates/cms/about.html
+++ b/cms/templates/cms/about.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "cms/base_tenant.html" %}
 
 {% block title %}About Us | {{ profile.display_name }}{% endblock %}
 
