--- a/cms/templates/cms/home.html
+++ b/cms/templates/cms/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "cms/base_tenant.html" %}
 
 {% block title %}{{ profile.display_name }} | Careers{% endblock %}
 
