--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,12 @@
 {% load static %}
-{% load tenant_tags %}
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Pillar & Post{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'marketing/css/style.css' %}">
+    
+    {% block extra_css %}{% endblock %}
 </head>
 <body class="marketing-site"> 
     <nav class="navbar navbar-expand-lg sticky-top border-bottom bg-white">
